--- a/workshop-environment.adoc
+++ b/workshop-environment.adoc
@@ -1,7 +1,7 @@
 = ワークショップ環境
 :experimental:
 
-== 最初のステップ ユーザー名を確認してください
+== 最初のステップ: ユーザー名を確認してください
 
 画面上部のボックスを見てください。あなたのユーザー名はすでに設定されていますか？設定されている場合は以下のようになります。
 
